[tool.poetry]
name = "nv200-python-lib"
version = "0.1.0"
description = "Python library for piezosystem NV200 device"
packages = [{include = "nv200"}]
authors = ["piezosystemjena GmbH"]
readme = "README.md"
include = ["examples/**/*"]

[tool.poetry.dependencies]
python = "^3.12,<4.0"
aioserial = ">=1.3.1,<2.0.0"
asyncio = ">=3.4.3,<4.0.0"
psutil = ">=7.0.0,<8.0.0"
pyserial = ">=3.5,<4.0"
telnetlib3 = ">=2.0.4,<3.0.0"


# This section defines the build system requirements for the project.
# - The `requires` field specifies the dependencies needed to build the project.
#   In this case, it requires `poetry-core` version 2.0.0 or higher, but less than 3.0.0.
# - The `build-backend` field specifies the backend used for building the project.
#   Here, it is set to `poetry_dynamic_versioning.backend`, which likely integrates
#   dynamic versioning functionality into the build process.
#   (The previously commented-out backend was `poetry.core.masonry.api`.)
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"
build-backend = "poetry_dynamic_versioning.backend"



# This section configures the "poetry-dynamic-versioning" plugin for Poetry.
# - `enable`: Enables the dynamic versioning functionality.
# - `vcs`: Specifies the version control system to use for versioning (e.g., "git").
# - `fix-shallow-repository`: Ensures compatibility with shallow Git repositories.
# - `bump`: Automatically increments the version based on changes in the repository.
[tool.poetry-dynamic-versioning]
# pipx inject poetry "poetry-dynamic-versioning[plugin]"
enable = true
vcs = "git"
fix-shallow-repository = true
bump = true